--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_course_introduce.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_course_introduce.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#FFFFFF"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:background="@color/colorPrimary" >
+        android:background="@color/colorPrimary">
 
         <ImageView
             android:id="@+id/ImageView01"
@@ -28,25 +28,26 @@
         android:orientation="horizontal">
 
         <com.qmuiteam.qmui.widget.QMUIRadiusImageView
-            app:qmui_is_circle="false"
-            app:qmui_corner_radius="5dp"
-            app:qmui_border_width="0dp"
-            android:layout_margin="20dp"
             android:id="@+id/iv_course_image"
             android:layout_width="160dp"
             android:layout_height="110dp"
-            android:src="@drawable/aixinbanmaxian"/>
+            android:layout_margin="20dp"
+            android:src="@drawable/aixinbanmaxian"
+            app:qmui_border_width="0dp"
+            app:qmui_corner_radius="5dp"
+            app:qmui_is_circle="false" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_course_name"
-                android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:paddingRight="15dp"
                 android:text="WEB应用程序设计" />
 
             <LinearLayout
@@ -54,13 +55,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/tv_learn_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="150 / 300人"
-                    android:gravity="center_vertical"
                     android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="150 / 300人"
                     android:textColor="#666666"
                     android:textSize="12sp" />
 
@@ -68,9 +70,9 @@
                     android:id="@+id/tv_sum_hour"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="共14课时"
-                    android:gravity="center_vertical"
                     android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="共14课时"
                     android:textColor="#666666"
                     android:textSize="12sp" />
             </LinearLayout>
@@ -87,20 +89,20 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:gravity="left"
-                    android:textColor="#666666"
-                    android:text="免费" />
+                    android:text="免费"
+                    android:textColor="#666666" />
 
                 <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                     android:id="@+id/bn_option"
-                    android:alpha="0.8"
-                    app:qmui_radius="@dimen/dimen_9dp"
-                    app:qmui_backgroundColor="@color/qmui_config_color_blue"
                     android:layout_width="100dp"
                     android:layout_height="30dp"
-                    android:gravity="center"
                     android:layout_marginLeft="20dp"
+                    android:alpha="0.8"
+                    android:gravity="center"
+                    android:text="报名选课"
                     android:textColor="#FFFFFF"
-                    android:text="报名选课" />
+                    app:qmui_backgroundColor="@color/qmui_config_color_blue"
+                    app:qmui_radius="@dimen/dimen_9dp" />
 
             </LinearLayout>
 
@@ -111,76 +113,78 @@
     <TabHost
         android:id="@+id/tab_course_introduce"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
 
             <TabWidget
+                android:id="@android:id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@android:id/tabs"
-                android:background="#FFFFFF"
-                ></TabWidget>
+                android:background="#FFFFFF"></TabWidget>
+
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:id="@android:id/tabcontent">
-                <LinearLayout
+
+                <FrameLayout
+                    android:id="@android:id/tabcontent"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/ll_course_introduce"
-                    android:orientation="vertical">
+                    android:layout_height="0dp"
+                    android:layout_weight="1">
 
-                    <TextView
-                        android:id="@+id/tv_course_teacher"
+                    <LinearLayout
+                        android:id="@+id/ll_course_introduce"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:gravity="center_vertical"
-                        android:textColor="#666666"
-                        android:text="授课教师：张三"/>
-                    <TextView
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:id="@+id/tv_course_introduce"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_course_teacher"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:gravity="center_vertical"
+                            android:text="授课教师：张三"
+                            android:textColor="#666666" />
+
+                        <TextView
+                            android:id="@+id/tv_course_introduce"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:gravity="center_vertical"
+                            android:text="这是课程介绍这是课程介绍这是课程介绍这是课程介绍这是课程介绍这是课程介绍这是课程介绍这是课程介绍这是课程介绍"
+                            android:textColor="#666666" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/ll_course_catalog"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:textColor="#666666"
-                        android:text="这是课程介绍这是课程介绍这是课程介绍这是课程介绍这是课程介绍这是课程介绍这是课程介绍这是课程介绍这是课程介绍"/>
-                </LinearLayout>
+                        android:layout_height="match_parent"
+                        android:background="#F9F9F9"
+                        android:orientation="vertical"
+                        android:padding="15dp">
 
-                <LinearLayout
-                    android:padding="15dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/ll_course_catalog"
-                    android:orientation="vertical"
-                    android:background="#F9F9F9">
-                    <com.fstech.yzedusc.view.MyListView
-                        android:id="@+id/lv_course_catalog"
-                        android:divider="#F0F0F0"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" >
-                    </com.fstech.yzedusc.view.MyListView>
+                        <com.fstech.yzedusc.view.MyListView
+                            android:id="@+id/lv_course_catalog"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:divider="#F0F0F0"></com.fstech.yzedusc.view.MyListView>
 
-                </LinearLayout>
+                    </LinearLayout>
 
-            </FrameLayout>
+                </FrameLayout>
 
             </ScrollView>
 
         </LinearLayout>
     </TabHost>
-
 
 
 </LinearLayout>
