--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_live_room.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_live_room.xml
@@ -11,7 +11,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:background="#FFFFFF"
+        android:background="@color/Write"
         app:cardCornerRadius="@dimen/dimen_9dp">
 
         <LinearLayout
